是否过滤被禁用的

--- a/demo/index.html
+++ b/demo/index.html
@@ -43,7 +43,7 @@
             <label><input class="input-checkbox" type="checkbox"></label>
             <label><input class="input-checkbox" type="checkbox"></label>
             <label><input class="input-checkbox" type="checkbox"></label>
-            <label><input class="input-checkbox" type="checkbox"></label>
+            <label><input disabled class="input-checkbox" type="checkbox"></label>
             <label><input class="input-checkbox" type="checkbox"></label>
             <label><input class="input-checkbox" type="checkbox"></label>
             <label><input class="input-checkbox" type="checkbox"></label>
