--- a/demo/index.html
+++ b/demo/index.html
@@ -51,6 +51,9 @@
             <label><input class="input-checkbox" type="checkbox"></label>
             <label><input class="input-checkbox" type="checkbox"></label>
         </div>
+        <div class="select-all">
+            <label><input class="input-checkbox" type="checkbox">全选</label>
+        </div>
         <script src="index.min.js"></script>
     </body>
 </html>
